Update Upload Files to CF Domain and Update Data.yml

--- a/.github/workflows/Upload Files to CF Domain and Update Data.yml
+++ b/.github/workflows/Upload Files to CF Domain and Update Data.yml
@@ -50,8 +50,8 @@ jobs:
         # 指定文件夹路径
         FOLDER_PATH="ip443"
 
-        # 遍历文件夹中所有匹配 *☮.txt 的文件
-        for FILENAME in "${FOLDER_PATH}"/*☮.txt; do
+        # 遍历文件夹中所有匹配 *_.txt 的文件
+        for FILENAME in "${FOLDER_PATH}"/*_.txt; do
           # 检查文件是否存在
           if [ ! -f "$FILENAME" ]; then
             echo "文件不存在: $FILENAME"
